; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/extr_io.c_IOWriteD.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/extr_io.c_IOWriteD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (i64, i32)* }

@IoPortProc = common dso_local global %struct.TYPE_4__* null, align 8
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IOWriteD(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @IoPortProc, align 8
  %7 = load i64, i64* %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %31

13:                                               ; preds = %2
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** @IoPortProc, align 8
  %15 = load i64, i64* %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (i64, i32)*, i32 (i64, i32)** %18, align 8
  %20 = icmp ne i32 (i64, i32)* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %13
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @IoPortProc, align 8
  %23 = load i64, i64* %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32 (i64, i32)*, i32 (i64, i32)** %26, align 8
  %28 = load i64, i64* %4, align 8
  %29 = load i32, i32* %5, align 4
  %30 = call i32 %27(i64 %28, i32 %29)
  br label %41

31:                                               ; preds = %13, %2
  %32 = load i64, i64* %4, align 8
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @LOWORD(i32 %33)
  %35 = call i32 @IOWriteW(i64 %32, i32 %34)
  %36 = load i64, i64* %4, align 8
  %37 = add i64 %36, 8
  %38 = load i32, i32* %5, align 4
  %39 = call i32 @HIWORD(i32 %38)
  %40 = call i32 @IOWriteW(i64 %37, i32 %39)
  br label %41

41:                                               ; preds = %31, %21
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @IOWriteW(i64, i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i32 @HIWORD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
